# backend-ii

.devcontainer/: devcontainer.json
backend_ii_python314_multiprocessing_showcase/: Makefile  README.md  main.py  processes_cpu.py  pyproject.toml  threads_cpu.py
session1/: factorial.py  main.py  pyproject.toml
session10/: main.py  pyproject.toml
session10/app/: api.py  payments.py  services.py
session11/: pyproject.toml
session11/app/: main.py
session14/: makefile  pyproject.toml  session-ses_1f6b.md
session14/docs/superpowers/specs/: 2026-05-08-session14-crewai-intro-design.md
session14/tomas/: .env.example  CHECKLIST.md  README.md  SETUP.md  pyproject.toml
session14/tomas/src/tomas/: crew.py  main.py
session14/tomas/src/tomas/config/: tasks.yaml
session2/: main.py  pyproject.toml
session4/: main.py
session4/.devcontainer/: devcontainer.json
session5/: pyproject.toml
session5/app/: main.py
session7/: main.py  pyproject.toml
session7/.devcontainer/: devcontainer.json
session7/ex2/: app.py  controlador.py  modelo.py  pessoa.py  vista.py
session7/tests/: test1_main.py  test_ex2.py
session8/: pyproject.toml
session9/: pyproject.toml
session9/loja/: db.sqlite3
session9/loja/loja/: settings.py  urls.py
session9/loja/store/: admin.py  models.py  urls.py  views.py
session9/loja/store/migrations/: 0001_initial.py
session9/loja/store/templates/: orders.html  products.html
