[project]
name = "tomas"
version = "0.1.0"
description = "tomas using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.4",
    "crewai-tools",
    "python-dotenv"
]

[project.scripts]
tomas = "tomas.main:run"
run_crew = "tomas.main:run"
train = "tomas.main:train"
replay = "tomas.main:replay"
test = "tomas.main:test"
run_with_trigger = "tomas.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
